[build-system]
requires = [
    "wheel",
    "setuptools>=61.0.0",
    "oldest-supported-numpy",
    "setuptools_scm[toml]>=6.2",
]
build-backend = "setuptools.build_meta"

[project]
name = "qseek"
requires-python = ">=3.10,<3.13"
license = { text = "GPLv3" }
dynamic = ["version"]

description = "qseek - Data-driven Earthquake Detection"
readme = "README.md"
authors = [{ name = "Marius Paul Isken", email = "mi@gfz.de" }]
maintainers = [{ name = "Marius Paul Isken", email = "mi@gfz.de" }]
keywords = [
    "seismology",
    "earthquake",
    "seismicity",
    "detection",
    "localization",
    "stacking-migration",
    "beamforming",
]

dependencies = [
    "numpy>=1.26, <2",
    "scipy>=1.8.0",
    "pyrocko>=2022.06.10",
    "seisbench>=0.8.0",
    "pydantic>=2.11.0",
    "aiohttp>=3.8",
    "aiohttp_cors>=0.7.0",
    "typing-extensions>=4.6",
    "lru-dict @ git+https://github.com/miili/lru-dict@feature/lru-subclassing",
    "rich>=13.4",
    "nest_asyncio>=1.5",
    "pyevtk>=1.6",
    "psutil>=5.9",
    "aiofiles>=23.0",
]

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Operating System :: POSIX",
    "Operating System :: MacOS",
    "Typing :: Typed",
    "Programming Language :: Python :: 3 :: Only",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
]

[project.optional-dependencies]
docs = [
    "mkdocs-material>=9.6",
    "mkdocstrings[python]>=0.25",
    "griffe-pydantic>=1.1.0",
    "markdown-exec>=1.9",
]
completion = ["argcomplete>=3.2"]

[project.scripts]
qseek = "qseek.apps.qseek:main"

[tool.setuptools.packages.find]
where = ["src/"]
include = ["qseek"]

[project.urls]
Home = "https://pyrocko.github.io/qseek/"
GitHub = "https://github.com/pyrocko/qseek"
Issues = "https://github.com/pyrocko/qseek/issues"

[tool.setuptools_scm]

[tool.ruff.lint]
extend-select = [
    'W',
    'N',
    'DTZ',
    'FA',
    'G',
    'RET',
    'SIM',
    'B',
    'RET',
    'C4',
    'I',
    'RUF',
    'T20',
    'D',
]

ignore = [
    "RUF012",
    "RUF009",
    "D100",
    "D101",
    "D102",
    "D103",
    "D104",
    "D105",
    "D107",
]

[tool.ruff]
target-version = 'py311'

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.pytest.ini_options]
markers = ["plot: plot figures in tests"]

[tool.cibuildwheel.macos]
before-build = "brew install libomp"

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.26.0",
    "ruff>=0.11.9",
]
