[build-system]
requires = [
    "wheel",
    "setuptools>=80",
    "numpy>=2",
    "setuptools_scm>=8",
    "simde-py==0.8.4rc1",
]
build-backend = "setuptools.build_meta"

[project]
name = "qseek"
requires-python = ">=3.12"
license = { text = "GPLv3" }
dynamic = ["version"]

description = "qseek - Data-driven Earthquake Detection"
readme = "README.md"
authors = [{ name = "Marius Paul Isken", email = "marius.isken@gfz.de" }]
maintainers = [{ name = "Marius Paul Isken", email = "marius.isken@gfz.de" }]
keywords = [
    "seismology",
    "earthquakes",
    "seismicity",
    "detection",
    "localization",
    "stacking-migration",
    "delay and sum",
    "beamforming",
]

dependencies = [
    "numpy>=2.3",
    "scipy>=1.16",
    "pyrocko>=2025.12",
    "seisbench>=0.10",
    "pydantic>=2.12",
    "aiohttp>=3.8",
    "aiohttp_cors>=0.7.0",
    "lru-dict @ git+https://github.com/amitdev/lru-dict",
    "rich>=14.0",
    "nest_asyncio>=1.5",
    "pyevtk>=1.6",
    "psutil>=7.0",
    "aiofiles>=23.0",
    "scikit-fmm >= 2025.1",
]

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Operating System :: POSIX",
    "Operating System :: MacOS",
    "Typing :: Typed",
    "Programming Language :: Python :: 3 :: Only",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
]

[project.optional-dependencies]
docs = [
    "mkdocs-material>=9.6",
    "mkdocstrings[python]>=1.0",
    "griffe-pydantic>=1.1",
    "markdown-exec>=1.12",
]
dev = [
    "prek>=0.2.25",
    "pytest>=8.3.5",
    "pytest-asyncio>=1.3",
    "pytest-benchmark>=5.0",
    "pytest-cov>=7.0",
    "ruff>=0.14",
]
completion = ["argcomplete>=3.2"]

[project.scripts]
qseek = "qseek.apps.qseek:main"
qseek-inversion = "qseek_inversion.app.qseek_inversion:main"

[tool.setuptools.packages.find]
where = ["src/"]
include = ["qseek"]

[project.urls]
Documentation = "https://pyrocko.github.io/qseek/"
GitHub = "https://github.com/pyrocko/qseek"
Issues = "https://github.com/pyrocko/qseek/issues"

[tool.ruff.lint]
extend-select = [
    'W',
    'N',
    'DTZ',
    'FA',
    'G',
    'RET',
    'SIM',
    'B',
    'RET',
    'C4',
    'I',
    'RUF',
    'T20',
    'D',
    'NPY201',
]

ignore = [
    "RUF012",
    "RUF009",
    "D100",
    "D101",
    "D102",
    "D103",
    "D104",
    "D105",
    "D107",
]

[tool.ruff]
target-version = 'py311'

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.pytest.ini_options]
markers = ["plot: plot figures in tests"]
asyncio_default_fixture_loop_scope = "function"
addopts = "--cov=qseek --cov-report html"

[tool.cibuildwheel.macos]
before-build = "brew install libomp"

[tool.setuptools_scm]

[dependency-groups]
dev = [
    "pre-commit>=4.5",
    "pytest>=9.0",
    "pytest-asyncio>=1.3",
    "pytest-benchmark>=5.2",
    "pytest-cov>=7.0",
    "ruff>=0.14",
]
